# ai_train

lora-train/: .dockerignore  .env.local.example  .env.prod.example  .gitignore  README.md  pyproject.toml
lora-train/configs/: local.yaml  prod.yaml
lora-train/data/: README.md  sample_eval.jsonl  sample_train.jsonl  train_chat.jsonl
lora-train/deploy/: Dockerfile  runpod_notes.md  runpod_start.sh
lora-train/lora_train.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lora-train/scripts/: eval.sh  export_gguf_optional.md  merge_lora.sh  prepare_bim_dataset.py  prepare_dataset.py  run_model.py  sanity_check_gpu.py  tmp_test_hf_model.py  train_local.sh  train_prod.sh
lora-train/src/: config.py  dataset.py  env.py  merge.py  train.py
lora-train/src/utils/: hf.py  logging.py
